--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
     <table cellspacing="20">
             <tr>
-                <td><img src="GabrielEck.png" alt=""></td>
+                <td><img src="Images/GabrielEck.png" alt=""></td>
                 <td><h1>Gabriel Eck</h1>
                     <p><em>IT Admin - <a href="https://belmopancitycouncil.org/welcome/">Belmopan City Council</a></strong></em></p>
                     <p>I'm presently working as IT Administrator for the Belmopan City Council, maintain the server resources as well as adding users.</p></td>
