--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <title>😎 Gabriel's Personal Site </title>
     </head>
-    <body style="background-color: blue;">
+    <body>
     <table cellspacing="20">
             <tr>
                 <td><img src="Images/GabrielEck.png" alt=""></td>
